# vam-tools

./: .coverage.Ivan-PC.1428770.XzytbnJx  .coverage.Ivan-PC.1428848.XKEZxaqx  .coverage.Ivan-PC.1428857.XgmYCNCx  .coverage.Ivan-PC.1428880.XdjLpOnx  .coverage.Ivan-PC.1428898.Xhasnetx  .coverage.Ivan-PC.1428908.XVmTZuTx  .coverage.Ivan-PC.1428918.XqVWgWIx  .coverage.Ivan-PC.1428946.XMImOLMx  .coverage.Ivan-PC.1428988.XdaEehox  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  =2.0.0  AUTOTAGGING_DESIGN.md  CODE_REDUCTION_PLAN.md  CONTRIBUTING.md  DESIGN_V2.md  DOCKER_README.md  DUPLICATE_DETECTION_IMPLEMENTATION.md  Dockerfile  Dockerfile.test  GPU_ACCELERATION_PLAN.md  GPU_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  LICENSE  LOCAL_SETUP.md  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  MULTI_CATALOG_SUMMARY.md  Makefile  PERFORMANCE_AND_GPU_SUMMARY.md  PHASE2_SUMMARY.md  PLAN-features-and-ui-redesign.md  PROGRESS.md  README.md  RENAME_SUMMARY.md  SESSION_STATE.md  (+19 more)
.githooks/: README.md  pre-push
.github/workflows/: ci.yml  docker.yml
.old_code/cli/: main.py
.old_code/core/: catalog_reorganization.py  date_extraction.py
.old_lightroom_code/: __init__.py  duplicate_image_finder.py  reorganize_lightroom_catalog.py
docs/: ARCHITECTURE.md  AUTO_TAGGING_DESIGN.md  CONTRIBUTING.md  DOCKER_DEPLOYMENT.md  FEATURES.md  NOTES.md  PRIORITIES.md  README.md  RERUN_ANALYSIS.md  REVIEW_README.md  ROADMAP.md  V2_TESTING_GUIDE.md  WEB_UI_GUIDE.md
docs/archive/: 2025-12-05-FEATURES.md  2025-12-06-features-ui-redesign.md  2025-12-24-metadata-gap-analysis.md  2025-12-24-metadata-rebuild-plan.md  CPU_OPTIMIZATION_SUMMARY.md  DOCUMENTATION_CLEANUP.md  NOTES.md  PHASE1_COMPLETE.md  REFACTOR_TO_SINGLE_SCHEMA.md  test_local.sh  test_parallel_jobs.py
docs/features/: burst-management.md
docs/findings/: 2025-12-30-duplicate-detection-consensus-breakthrough.md
docs/guides/: CONTRIBUTING.md  DOCKER_SETUP.md  GPU_SETUP_GUIDE.md  JOB_SAFETY.md  LOCAL_SETUP.md  TESTING.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/plans/: 2025-11-10-vam-tools-redesign.md  2025-11-15-postgres-pydantic-orm-layer.md  2025-12-06-burst-detection.md  2025-12-06-semantic-search.md  2025-12-12-edit-mode-design.md  2025-12-12-task-status-design.md  2025-12-21-fix-duplicate-detection-transitive-closure.md  2025-12-22-duplicate-management-features-design.md  2025-12-24-status-filtering-pattern.md  2025-12-24-thumbnail-audit-findings.md  2025-12-25-catalog-health-plan.md  2025-12-25-documentation-cleanup-plan.md  2025-12-26-file-reorganization-design.md  2025-12-26-file-reorganization-implementation.md  2025-12-29-catalog-to-import-model-design.md  2025-12-29-comparison-architecture-redesign.md  2025-12-29-efficient-clique-grouping.md  2025-12-31-unify-burst-duplicate-views.md  2026-01-01-quality-based-duplicate-resolution.md  AUTO_TAGGING_DESIGN.md  CATALOG_BROWSING_OPTIMIZATION_PLAN.md  GPU_ACCELERATION_PLAN.md  MEMORIA_FUTURE_PROJECT.md  UI_IMPLEMENTATION_PLAN.md  UI_REDESIGN_PLAN.md  UNIFIED_UI_SUMMARY.md
docs/research/: VIDEO_HASHING.md
docs/roadmap/: ROADMAP.md  composition-quality-scoring.md
docs/status/: 2025-12-31-import-workflow-progress.md
docs/technical/: ARCHITECTURE.md  DATE_EXTRACTION_GUIDE.md  DEVELOPMENT_APPROACH.md  HOW_IT_WORKS.md  POSTGRES_MIGRATION.md  REQUIREMENTS.md  SAFETY_GUARANTEES.md
lightroom_tools/: cli.py  image_date_analyzer.py
lumina/: __init__.py  celery_app.py  health_check.py  version.py
lumina/analysis/: burst_detector.py  duplicate_detector.py  file_verification.py  gpu_hash.py  image_tagger.py  perceptual_hash.py  scanner.py  semantic_search.py  tag_manager.py  tag_taxonomy.py
lumina/api/: __init__.py  app.py
lumina/cli/: __init__.py  analyze.py  generate_thumbnails.py  server.py  web.py
lumina/core/: catalog_config.py  gpu_utils.py  schema.sql  utils.py
lumina/db/: __init__.py  catalog_db.py  catalog_schema.py  config.py  models.py  schemas.py  serializers.py
lumina/jobs/: __init__.py  celery_app.py  coordinator.py  duplicate_utils.py  job_metrics.py  job_recovery.py  parallel_bursts.py  parallel_duplicates.py  parallel_duplicates.py.backup  parallel_jobs.py  parallel_quality.py  parallel_scan.py  parallel_tagging.py  parallel_thumbnails.py  reorganize.py  scan_stats.py  tasks.py
lumina/organization/: file_organizer.py  strategy.py  transaction.py
lumina/scripts/: run_migration.py
lumina/shared/: __init__.py  media_utils.py  thumbnail_utils.py
lumina/web/: api.py  catalogs_api.py
migrations/: 001_import_workflow_schema.sql
scripts/: README.md  iphone-mount.sh  kill_tests.sh  run_tests.sh
scripts/migrations/: migrate_geohash.py
tests/: __init__.py  conftest.py  test_api.py  test_catalog_schema.py  test_celery.py  test_db.py  test_integration.py  test_scanner.py  test_version.py
tests/.old_core/: test_catalog_reorganization.py  test_date_extraction.py  test_duplicate_detection.py
tests/analysis/: test_burst_detector.py  test_duplicate_detector.py  test_fast_search.py  test_file_verification.py  test_gpu_hash.py  test_image_tagger.py  test_metadata.py  test_perceptual_hash.py  test_perceptual_hash_performance.py  test_preview_extractor.py  test_quality_scorer.py  test_scanner.py  test_semantic_search.py  test_tag_manager.py  test_tag_taxonomy.py  test_video_hash.py
tests/api/: conftest.py  test_burst_management_api.py  test_catalogs.py  test_endpoints.py  test_jobs.py  test_status_filtering.py  test_thumbnails.py
tests/cli/: test_analyze.py  test_cli_integration.py  test_generate_thumbnails.py  test_organize.py  test_performance_tracking.py  test_server.py  test_web.py
tests/core/: test_catalog.py  test_catalog_reorganization.py  test_database.py  test_date_extraction.py  test_duplicate_detection.py  test_gpu_utils.py  test_image_utils.py  test_migrate_to_sqlite.py  test_performance_stats.py  test_utils.py
tests/db/: test_bursts_schema.py  test_catalog_db_integration.py  test_catalog_schema.py  test_clip_embedding_migration.py  (+4 more)
vam_tools/: __init__.py  celery_app.py  health_check.py  version.py
(+177 files in other folders)
